[gd_scene load_steps=3 format=3 uid="uid://dg0od442xaj62"]

[ext_resource type="Script" path="res://Scripts/UIMenus/ItemSquare.gd" id="1_tl52g"]
[ext_resource type="Texture2D" uid="uid://b2wywfncl1qhl" path="res://Assets/Resources/Telescope.tres" id="2_rjuj4"]

[node name="ItemSquare" type="MarginContainer"]
custom_minimum_size = Vector2(0, 100)
script = ExtResource("1_tl52g")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="ItemImage" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_rjuj4")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemName" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 14
text = "Telescope"
fit_content = true

[node name="ItemDescription" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 10
text = "See farther, shoot farther."
fit_content = true
